# ori-lang-website

./: .gitignore  README.md  astro.config.mjs  eltshot.tmp.mjs  package-lock.json  package.json
.github/workflows/: deploy.yml
playground-wasm/: Cargo.toml
playground-wasm/.cargo/: config.toml
playground-wasm/src/: lib.rs
public/: changelog.json  install.sh  robots.txt  test-results.json  tutorial-manifest.json
scripts/: add-compiler-design-frontmatter.sh  build-tutorial.mjs  copy-wasm.sh  generate-changelog.sh
src/: content.config.ts
src/blog/: building-ori-from-scratch.md  cross-compilation-nightmare.md  the-double-free-that-rebuilt-aims.md  three-weeks-of-compiler-plumbing.md  too-clever-to-be-right.md
src/components/: RoadmapRow.astro  SectionCard.astro  TimelineMinimap.astro  TocSidebar.astro
src/components/common/: Footer.astro  Header.astro
src/components/docs/: DocsSidebar.astro
src/components/journey/: JourneyProgressBar.svelte  JourneyShell.svelte  journey-types.ts
src/layouts/: BaseLayout.astro  DetailLayout.astro  DocsLayout.astro  GuideLayout.astro  PlaygroundLayout.astro  TutorialLayout.astro
src/lib/: blog.ts  journey-parser.ts  llms.ts  plan-data.ts
src/loaders/: plan-section-loader.ts  proposal-loader.ts
src/pages/: changelog.astro  grammar.html.ts  index.astro  llms-full.html.ts  llms-full.txt.ts  llms-reference.html.ts  llms-reference.txt.ts  llms-syntax.txt.ts  llms.html.ts  llms.txt.ts
src/pages/blog/: [slug].astro  (+1 more)
src/remark/: remark-md-links.mjs
src/shiki/: ori-dark-theme.json
src/styles/: global.css  tokens.css
(+77 files in other folders)
