[package]
name = "ori-playground-wasm"
version = "2026.3.6-alpha.4"
edition = "2021"
description = "WebAssembly bindings for the Ori language playground"

# Standalone package (not part of main workspace)
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Portable compiler driver (no Salsa, no IO)
ori_compiler = { path = "../../ori_lang/compiler/ori_compiler" }

# Direct deps still needed for types and utilities
ori_eval = { path = "../../ori_lang/compiler/ori_eval" }
ori_diagnostic = { path = "../../ori_lang/compiler/ori_diagnostic" }

# WASM bindings
wasm-bindgen = "0.2"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true

# wasm-opt's bundled binaryen doesn't support reference types (multiple tables).
# Disable until wasm-pack ships a newer binaryen version.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
